// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCardField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        data-checked="false"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        >
          <div
            aria-disabled="false"
            class="uv_475tndd uv_17da2jl2"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              class="uv_17da2jl6"
              id="_r_1_"
              name="test"
              tabindex="-1"
              type="radio"
              value="test"
            />
            <svg
              class="uv_17da2jl7"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_17da2jl9"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_17da2jl8"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo"
              for="_r_1_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_475tndb uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_4k0ekn0: 100%;"
        >
          Radio field
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        data-checked="true"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        >
          <div
            aria-disabled="false"
            class="uv_475tndd uv_17da2jl2"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              checked=""
              class="uv_17da2jl6"
              id="_r_9_"
              name="test"
              tabindex="-1"
              type="radio"
              value="checked"
            />
            <svg
              class="uv_17da2jl7"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_17da2jl9"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_17da2jl8"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo"
              for="_r_9_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_475tndb uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_4k0ekn0: 100%;"
        >
          Radio field checked
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        data-checked="false"
        data-disabled="true"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
      >
        <div
          class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        >
          <div
            aria-disabled="true"
            class="uv_475tndd uv_17da2jl2"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-disabled="true"
              aria-invalid="false"
              class="uv_17da2jl6"
              disabled=""
              id="_r_5_"
              name="test"
              tabindex="-1"
              type="radio"
              value="disabled"
            />
            <svg
              class="uv_17da2jl7"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_17da2jl9"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_17da2jl8"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo"
              for="_r_5_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_475tndb uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_4k0ekn0: 100%;"
        >
          Radio field disabled
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly with errors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        data-checked="false"
        data-disabled="false"
        data-error="true"
        data-type="radio"
        role="button"
        style="--uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        >
          <div
            aria-disabled="false"
            class="uv_475tndd uv_17da2jl2"
            data-checked="false"
            data-error="true"
          >
            <input
              aria-disabled="false"
              aria-invalid="true"
              class="uv_17da2jl6"
              id="_r_h_"
              name="test"
              tabindex="-1"
              type="radio"
              value="checked"
            />
            <svg
              class="uv_17da2jl7"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_17da2jl9"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_17da2jl8"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo"
              for="_r_h_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_475tndb uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_4k0ekn0: 100%;"
        >
          Radio field error
        </div>
      </div>
      <button
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        data-checked="true"
        data-disabled="false"
        data-error="false"
        data-type="radio"
        role="button"
        style="--uv_4k0ekn3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        >
          <div
            aria-disabled="false"
            class="uv_475tndd uv_17da2jl2"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              class="uv_17da2jl6"
              id="_r_d_"
              name="test"
              tabindex="-1"
              type="radio"
              value="events"
            />
            <svg
              class="uv_17da2jl7"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="uv_17da2jl9"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="uv_17da2jl8"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo"
              for="_r_d_"
            >
              test
            </label>
          </div>
        </div>
        <div
          class="uv_475tndb uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
          data-has-default-cursor="false"
          data-has-label="false"
          style="--uv_4k0ekn0: 100%;"
        >
          Radio field events
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
